--- a/setup.cfg
+++ b/setup.cfg
@@ -5,11 +5,10 @@ license = BSD 3-Clause License
 
 [options]
 python.requires = 3.6
-packages = spcdist
+packages = spcdist, spcdist.attention
 install_requires =
     numpy>=1.14.6
-    scipy>=1.1
-
+    scipy>=1.2
 
 [options.extras_require]
 torch = torch>=1.8.1
