--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Install package
         run: |
-          pip install .
+          pip install .[torch]
       - name: Test with pytest
         run: |
           pytest --pyargs spcdist
