include tests submodule

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ license = BSD 3-Clause License
 
 [options]
 python.requires = 3.6
-packages = spcdist, spcdist.attention
+packages = spcdist, spcdist.attention, spcdist.tests
 install_requires =
     numpy>=1.14.6
     scipy>=1.2
